hphp/hack/test/typecheck/readonly/list_assign.php.exp
File "list_assign.php", line 25, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "list_assign.php", line 26, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
